testsuite/poke.pkl/scons-diag-2.pk
/* { dg-do compile } */

type Foo = struct { int i; long j; };

var a = Foo { i = "invalid type" };  /* { dg-error "" } */
